# runi

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/: release.yml
.github/workflows/: auto-merge.yml  docs.yml  labeler.yml  release-note.yml  release.yml  test.yml
docs/: book.toml
docs/src/: SUMMARY.md  getting-started.md  introduction.md
docs/src/crates/: overview.md  runi-cli.md  runi-core.md  runi-log.md  runi-test.md  runi.md
plans/: 2026-04-18-mdbook-docs.md  2026-04-18-unified-versioning.md  2026-04-19-cargo-publish-release-workflow.md  2026-04-19-runi-cli-launcher-phase-1.md  2026-04-19-runi-cli-launcher-phase-2.md  2026-04-19-runi-facade-crate.md
runi/: Cargo.toml
runi-cli/: Cargo.toml
runi-cli-macros/: Cargo.toml
runi-cli-macros/src/: command.rs  lib.rs
runi-cli/examples/: tint_demo.rs
runi-cli/src/: lib.rs  tint.rs
runi-cli/src/launcher/: dispatch.rs  error.rs  help.rs  mod.rs  parser.rs  schema.rs  types.rs
runi-cli/tests/: derive.rs
runi-core/: Cargo.toml
runi-core/src/: config.rs  error.rs  lib.rs  str_util.rs
runi-log/: Cargo.toml
runi-log/examples/: hello_log.rs
runi-log/src/: format.rs  lib.rs
runi-test/: Cargo.toml
runi-test/src/: lib.rs  prelude.rs
runi/src/: lib.rs
