[workspace]
members = ["runi-cli", "runi-cli-macros", "runi-core", "runi-log", "runi-test"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/wvlet/runi"
homepage = "https://github.com/wvlet/runi"

[workspace.dependencies]
runi-cli = { path = "runi-cli", version = "0.1.0" }
runi-cli-macros = { path = "runi-cli-macros", version = "0.1.0" }
runi-core = { path = "runi-core", version = "0.1.0" }
runi-log = { path = "runi-log", version = "0.1.0" }
runi-test = { path = "runi-test", version = "0.1.0" }

chrono = { version = "0.4", default-features = false, features = ["clock"] }
nu-ansi-term = "0.50"
pretty_assertions = "1"
proc-macro2 = "1"
proptest = "1"
quote = "1"
rstest = "0.25"
syn = { version = "2", features = ["full", "extra-traits"] }
thiserror = "2"
tracing = "0.1"
tracing-core = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
trybuild = "1"
