[package]
name = "runi-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal styling and CLI utilities for the Runi library collection"

[dependencies]
nu-ansi-term.workspace = true
runi-cli-macros = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["dep:runi-cli-macros"]

[dev-dependencies]
runi-test.workspace = true
