[package]
name = "runi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Core types for the Runi library collection"
keywords = ["core", "types", "library", "foundation"]
categories = ["rust-patterns"]

[dependencies]
thiserror.workspace = true

[dev-dependencies]
runi-test.workspace = true
rstest.workspace = true
