[package]
name = "runi-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Runi core library — foundation types plus a feature-gated bundle that re-exports runi-log and runi-cli"
keywords = ["runi", "core", "foundation", "logging", "cli"]
categories = ["rust-patterns"]

[dependencies]
thiserror.workspace = true
runi-log = { workspace = true, optional = true }
runi-cli = { workspace = true, optional = true }

[features]
default = ["log", "cli"]
log = ["dep:runi-log"]
cli = ["dep:runi-cli"]

[dev-dependencies]
runi-test.workspace = true
rstest.workspace = true
