[package]
name = "runi-log"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Structured logging for the Runi library collection"

[dependencies]
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-core.workspace = true
nu-ansi-term.workspace = true
chrono.workspace = true
