[package]
name = "runi-test"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Test utilities for the Runi library collection"

[dependencies]
rstest.workspace = true
pretty_assertions.workspace = true
proptest = { workspace = true, optional = true }

[features]
default = []
property = ["proptest"]
