[package]
name = "runi"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Top-level façade crate for the Runi library collection — re-exports runi-core, runi-log, and (optionally) runi-cli behind feature flags"
keywords = ["runi", "facade", "logging", "cli", "library"]
categories = ["rust-patterns"]
publish = false

[dependencies]
runi-core = { workspace = true, optional = true }
runi-log = { workspace = true, optional = true }
runi-cli = { workspace = true, optional = true }

[features]
default = ["core", "log"]
core = ["dep:runi-core"]
log = ["dep:runi-log"]
cli = ["dep:runi-cli"]
